@@ -50,6 +50,7 @@ dillo-2.1
 +- Reduced warnings with gcc-4.3.
    Patch: Thomas Orgis
 +- Made the parser recognize "[^ ]/>"-terminated XML elements.
+ - Added "font_min_size" dillorc option.
    Patch: Johannes Hofmann
 +- Added the "middle_click_drags_page" dillorc option.
    Patch: Jorge Arellano Cid, Thomas Orgis
